--- a/ingresar_informacion.html
+++ b/ingresar_informacion.html
@@ -25,7 +25,8 @@
       <div class="input-group">
         <label for="foto-input" class="btn-secondary">Tomar Fotografía (Opcional)</label>
         <input type="file" id="foto-input" accept="image/*" capture="environment">
-        <img id="foto-preview" alt="Vista previa de la foto" hidden>
+        <img id="foto-preview" class="preview-thumb" alt="Vista previa" hidden>
+
       </div>
 
       <div class="input-group">
