--- a/registrar_incidente.html
+++ b/registrar_incidente.html
@@ -61,7 +61,7 @@
         <div class="input-group">
           <label class="btn-secondary" for="foto-input" style="width:auto;">Tomar Fotografía (Opcional)</label>
           <input id="foto-input" type="file" accept="image/*" capture="environment">
-          <img id="foto-preview" alt="Vista previa" hidden>
+          <img id="foto-preview" class="preview-thumb" alt="Vista previa" hidden>
         </div>
 
         <!-- Firma -->
