--- a/consigna_permanente.html
+++ b/consigna_permanente.html
@@ -36,7 +36,7 @@
         <div class="input-group">
           <label class="btn-secondary" for="foto-input" style="width:auto;">Adjuntar Fotografía (Opcional)</label>
           <input id="foto-input" type="file" accept="image/*" capture="environment">
-          <img id="foto-preview" alt="Vista previa" hidden>
+          <img id="foto-preview" class="preview-thumb" alt="Vista previa" hidden>
         </div>
 
         <div class="input-group">
